--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^144.0.0",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
+    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
